💄 attempt to fix input disabled text color on Safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -122,6 +122,14 @@
 }
 
 @layer components {
+  /* https://stackoverflow.com/questions/43483363/safari-color-with-background-transparency-on-disabled-input/43483479#43483479 */
+  .bug-input-color-dark {
+    -webkit-text-fill-color: rgb(241 245 249);
+  }
+  .bug-input-color-light {
+    -webkit-text-fill-color: rgb(8 145 178);
+  }
+
   .clickable-text-cyan {
     @apply font-bold 
     text-cyan-600 dark:text-cyan-500
